...
            )
        ) {
            Text("ACCEDI", fontSize = 32.sp)
        }

        TextButton(
            modifier = Modifier.semantics { testTag = "registrati" },
            onClick = { onRegistratiClick() }
        ) {
            Text(
                text = "O registrati gratuitamente",
                fontSize = 16.sp,
                color = MaterialTheme.colorScheme.onBackground,
...
